# quadratic_solver

./: .gitignore  README.md  pyproject.toml
src/quadratic_solver/: model.py  quadratic_model.py  run.py  solve_and_graph.py  test.py
