[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "quadratic_solver"
version = "0.0.2"
authors = [
  { name="Uchenna Adubasim", email="uchadubs@gmail.com" },
]
description = "A package that solves and graphs quadratic equations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib >= 3.8.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/uche-wealth/quadratic_solver"
Issues = "https://github.com/uche-wealth/quadratic_solver/issues"
