[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "quadratic_solver"
version = "1.0.1"
authors = [
  { name="Uchenna Adubasim", email="uchadubs@gmail.com" },
]
description = "A package that solves and graphs quadratic equations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib >= 3.8.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.scripts]
quadratic-solver = "quadratic_solver.run:main"

[project.urls]
Homepage = "https://github.com/uche-wealth/quadratic_solver"
Issues = "https://github.com/uche-wealth/quadratic_solver/issues"

[tool.setuptools.packages.find]
include = ["quadratic_solver*"]
