[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "quadratic_solver"
version = "1.0.6"
authors = [
  { name="Uchenna Adubasim", email="uchadubs@gmail.com" },
]
description = "A package that solves and graphs quadratic equations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib >= 3.8.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.scripts]
test-quadratic-engine = "quadratic_solver.test:run"

[project.urls]
Homepage = "https://github.com/uche-wealth/quadratic_solver"
Issues = "https://github.com/uche-wealth/quadratic_solver/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["quadratic_solver*"]

[tool.setuptools]
package-dir = {"" = "src"}
